--- a/PowerPlanChanger/Properties/Resources.resx
+++ b/PowerPlanChanger/Properties/Resources.resx
@@ -118,7 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="EnergyButton_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EnergyButton_large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EnergyButton_medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EnergyButton_medium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EnergyButton_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EnergyButton_small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EnergyButton_xsmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EnergyButton_xsmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EnergySaver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EnergySaver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PerformanceBattery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PerformanceBattery.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PerformanceButton_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PerformanceButton_large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PerformanceButton_medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PerformanceButton_medium.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PerformanceButton_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PerformanceButton_small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PerformanceButton_xsmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PerformanceButton_xsmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
